--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,5 +3,5 @@
         <h2 class="mat-h2">Sito web della parrocchia di Sant'Antonio da Padova - Porto Mantovano</h2>
     </div>
 </div>
-<component-avvisi></component-avvisi>
+<component-avvisi maxAvvisi="3"></component-avvisi>
 <mat-divider></mat-divider>
