--- a/frontend/src/app/components/avvisi/avvisi.component.html
+++ b/frontend/src/app/components/avvisi/avvisi.component.html
@@ -1,1 +1,13 @@
-<mat-card *ngFor="let avviso of avvisi" class="card-avviso">{{avviso}}</mat-card>
+<div class="avvisi-container">
+<mat-card *ngFor="let avviso of avvisi | slice:0:maxAvvisi" class="card-avviso">
+    <mat-card-header>
+      <mat-card-title>{{avviso.titolo}}</mat-card-title>
+      <mat-card-subtitle>{{avviso.data}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{avviso.contenuto}}
+      </p>
+    </mat-card-content>
+</mat-card>
+</div>
