--- a/frontend/src/app/components/avvisi/avvisi.component.html
+++ b/frontend/src/app/components/avvisi/avvisi.component.html
@@ -1,13 +1,20 @@
+
+<div class="avvisi-title">
+  <p>Avvisi recenti</p>
+</div>
+
 <div class="avvisi-container">
 <mat-card *ngFor="let avviso of avvisi | slice:0:maxAvvisi" class="card-avviso">
-    <mat-card-header>
-      <mat-card-title>{{avviso.titolo}}</mat-card-title>
+    <mat-card-header class="title">
+      <mat-card-title >{{avviso.titolo}}</mat-card-title>
       <mat-card-subtitle>{{avviso.data}}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
+    <mat-divider></mat-divider>
+    <mat-card-content class="content">
       <p>
         {{avviso.contenuto}}
       </p>
     </mat-card-content>
 </mat-card>
+
 </div>
