--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -5,3 +5,7 @@
 </div>
 <component-avvisi maxAvvisi="3"></component-avvisi>
 <mat-divider></mat-divider>
+<component-about></component-about>
+<mat-divider></mat-divider>
+<component-contatti></component-contatti>
+<mat-divider></mat-divider>
