--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,16 +1,18 @@
-<mat-toolbar color="primary"><span>{{toolbarTitle}}</span>
+<mat-toolbar color="primary">
+  <button *ngIf="!location.isCurrentPathEqualTo('/home')"
+    mat-icon-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+  <span>{{toolbarTitle}}</span>
   <!--<div class="navbar-links">
     <button *ngIf="isLoggedIn == false" mat-button (click)="openLoginDialog()">Login</button>
     <button *ngIf="isLoggedIn == false" mat-button (click)="openRegisterDialog()">Register</button>
   </div>-->
-  <span>
-    <a mat-button routerLink="/home">Home</a>
-  </span>
   <div class="navbar-links">
     <a mat-button routerLink="/avvisi">Storico avvisi</a>
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
-<footer class="footer" >
+<footer class="footer">
   <h2 class="mat-h2">Questo è il footer</h2>
 </footer>
