--- a/frontend/src/app/components/contatti/contatti.component.html
+++ b/frontend/src/app/components/contatti/contatti.component.html
@@ -1,4 +1,4 @@
-<h2 class="mat-h2" style="margin: 10px auto; width: fit-content;">Contatta Don Gigi</h2>
+<h2 class="mat-h2 primary-title" style="margin: 10px auto; width: fit-content;">Contatta Don Luigi</h2>
 <div class="content">
     <p>Numero canonica: 1315644556</p>
     <p>Numero canonica: 1315644556</p>
