--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,6 +3,7 @@
         <h2 class="mat-h2">Sito web della parrocchia di Sant'Antonio da Padova - Porto Mantovano</h2>
     </div>
 </div>
+<h2 class="mat-h2 primary-title" style="width: fit-content; margin: 10px auto;">Avvisi recenti</h2>
 <component-avvisi maxAvvisi="3"></component-avvisi>
 <mat-divider></mat-divider>
 <component-about></component-about>
