--- a/frontend/src/app/pages/avvisi-page/avvisi-page.component.css
+++ b/frontend/src/app/pages/avvisi-page/avvisi-page.component.css
@@ -3,14 +3,17 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media (min-width: 1024px) {
-  .list-avvisi{
-    width: 30%;
-    justify-content: center;
-    display: inline-flex;
-    flex-wrap: wrap;
-    padding: 1%;
+@media (max-width: 640px) {
+
+  .mat-list-item > .mat-list-item-content {
+    display: flex !important;
+    flex-direction: column !important;
   }
+
+}
+
+.header {
+  min-width: 100px;
 }
 
 .title{
@@ -22,18 +25,24 @@
   color:#3f51b5;
 }
 
-.header{
-
-}
-
 .content{
   background-color: #f7f7f7;
-  width: 100%;
+  width: max-content;
   padding: 20px;
   text-align: justify; 
   font-size: 16px;
   margin-bottom: 20px;
 }
+
+/* Overwrite of list item height */
+.mat-list-item {
+  height: auto !important;
+}
+
+.mat-list-item > .mat-list-item-content {
+  width: max-content !important;
+}
+
 
 
 
