--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -12,7 +12,9 @@
 }
 
 .footer {
-    background-color: lightgrey;
+    background-color: #3f51b5;
+    color: white;
+    text-align: center;
     width: 100%;
     height: fit-content;
     padding: 10px 40px;
