--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -15,6 +15,6 @@
 <router-outlet></router-outlet>
 <footer class="footer">
   <h4 class="mat-h4">
-    Parrocchia di S.Antonio - Piazza della Chiesa - 46047 Porto Mantovano (MN) - Codice fiscale: 93007890200
+    Parrocchia di S.Antonio - Piazzale Sant' Antonio, 5, 46047 Porto Mantovano (MN)  - Codice fiscale: 93007890200
   </h4>
 </footer>
