--- a/frontend/src/app/components/contatti/contatti.component.html
+++ b/frontend/src/app/components/contatti/contatti.component.html
@@ -1,8 +1,6 @@
-<h2 class="mat-h2 primary-title" style="margin: 10px auto; width: fit-content;">Contatta Don Luigi</h2>
+<h2 class="mat-h2 primary-title" style="margin: 10px auto; width: fit-content;">Contatti</h2>
 <div class="content">
-    <p>Numero canonica: 1315644556</p>
-    <p>Numero canonica: 1315644556</p>
-    <p>Numero canonica: 1315644556</p>
-    <p>Numero canonica: 1315644556</p>
-    <p>Numero canonica: 1315644556</p>
+
+  <h3 class="mat-h3">Don Luigi Caramaschi : 0376/399181</h3>
+  <h3 class="mat-h3">Suore : 0376/391782</h3>
 </div>
