--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -1,9 +1,7 @@
 <div *ngIf="isLoaded">
-    <h2 class="mat-h2 primary-title" style="width: fit-content; margin: 10px auto;">Guarda il nuovo video: {{youtubeVideoObj.title}}</h2>
+    <h2 class="mat-h2 primary-title" style="width: fit-content; max-width: 90%; margin: 10px auto;">Guarda il nuovo video: {{youtubeVideoObj.title}}</h2>
     <div class="container">
-        <div class="video-container">
-            <youtube-player [videoId]="youtubeVideoObj.videoId"></youtube-player>
-        </div>
+        <youtube-player class="video-container" [videoId]="youtubeVideoObj.videoId" [width]="videoWidth" [height]="videoHeight"></youtube-player>
         <div class="informations">
             <h3 class="mat-h3">Descrizione</h3>
             <p>{{youtubeVideoObj.description}}</p>
