--- a/frontend/src/app/components/contatti/contatti.component.html
+++ b/frontend/src/app/components/contatti/contatti.component.html
@@ -1,6 +1,5 @@
 <h2 class="mat-h2 primary-title" style="margin: 10px auto; width: fit-content;">Contatti</h2>
 <div class="content">
-
-  <h3 class="mat-h3">Don Luigi Caramaschi : 0376/399181</h3>
-  <h3 class="mat-h3">Suore : 0376/391782</h3>
+  <h3 class="mat-h3">Canonica : <mat-icon>local_phone</mat-icon> <a href="tel:+39 0376399181">0376/399181</a></h3>
+  <h3 class="mat-h3">Suore : <mat-icon>local_phone</mat-icon> <a href="tel:+39 0376391782">0376/391782</a></h3>
 </div>
