--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,4 @@
+/*
 @media (min-width: 400px) {
     .navbar-links {
         margin-left: auto;
@@ -10,7 +11,16 @@
         visibility: hidden;
     }
 }
+*/
 
+.navbar-links {
+    margin-left: auto;
+    margin-right: 0px;
+}
+
+.back-arrow {
+    margin-left: -8px;
+}
 .footer {
     background-color: #3f51b5;
     color: white;
