--- a/frontend/src/app/components/contatti/contatti.component.css
+++ b/frontend/src/app/components/contatti/contatti.component.css
@@ -1,6 +1,7 @@
 .content {
-    margin: 10px 40px;
-    text-align: center;
+  max-width: 90%;
+  margin: 10px auto;
+  text-align: center;
 }
 
 .material-icons{
