--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
     <button *ngIf="isLoggedIn == false" mat-button (click)="openRegisterDialog()">Register</button>
   </div>-->
   <div class="navbar-links">
-    <a mat-button routerLink="/avvisi">Storico avvisi</a>
+    <a mat-button color="accent" routerLink="/covid19">Covid-19</a>
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
