--- a/frontend/src/app/components/about/about.component.css
+++ b/frontend/src/app/components/about/about.component.css
@@ -2,6 +2,12 @@
     margin: 0 auto;
 }
 
+.center {
+    margin: 10px auto; 
+    width: fit-content;
+    max-width: 90%;
+  }
+
 @media (min-width: 992px) {
     .container {
         display: flex;
