--- a/frontend/src/app/components/avvisi/avvisi.component.css
+++ b/frontend/src/app/components/avvisi/avvisi.component.css
@@ -62,8 +62,10 @@
   width: 100%;
 }
 
-/*
-.mat-card > .mat-card-actions {
-  margin: 0 !important; 
+.link-to-history {
+  display: block;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
 }
-*/
