--- a/frontend/src/app/components/contatti/contatti.component.html
+++ b/frontend/src/app/components/contatti/contatti.component.html
@@ -2,4 +2,5 @@
 <div class="content">
   <h3 class="mat-h3">Canonica : <mat-icon>local_phone</mat-icon> <a href="tel:+39 0376399181">0376/399181</a></h3>
   <h3 class="mat-h3">Suore : <mat-icon>local_phone</mat-icon> <a href="tel:+39 0376391782">0376/391782</a></h3>
+  <h3 class="mat-h3">Posta elettronica : <mat-icon>email</mat-icon> <a href="mailto:info@parrocchiasantonio.it">info@parrocchiasantonio.it</a></h3>
 </div>
